# leaseai

./: .env.example  .gitignore  Makefile  README.md  SELF_HOSTING.md  pyproject.toml
.github/workflows/: ci.yml  claude.yml
backend/: requirements.txt
backend/handlers/: get_results.py  presign.py  process.py  submit.py
backend/lib/: ai_client.py  constants.py  model_router.py  pdf_parser.py  prompt_store.py  schema.py
backend/prompts/: lease_analysis.py  system.txt  user_template.txt
backend/tests/: conftest.py
backend/tests/fixtures/: sample_lease.txt
backend/tests/integration/: test_analyze_pipeline.py
backend/tests/unit/: test_ai_client.py  test_get_results_handler.py  test_model_router.py  test_pdf_parser.py  test_presign_handler.py  test_process_handler.py  test_schema.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/demo/: DemoAnalysis.tsx
frontend/src/components/landing/: FAQ.tsx  Hero.tsx  HowItWorks.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/results/: AnalysisResults.tsx  ClauseCard.tsx  FinancialBreakdown.tsx  KeyDatesTimeline.tsx  RedFlags.tsx  RiskScore.tsx
frontend/src/components/upload/: PaymentFlow.tsx  UploadZone.tsx
frontend/src/data/: demoAnalysis.ts
frontend/src/hooks/: useAnalysis.ts  useUpload.ts
frontend/src/lib/: api.ts
frontend/src/types/: analysis.ts
infra/: app.py  cdk.json  leaseai_stack.py
scripts/: generate_test_lease.py
